@@ -22,6 +22,7 @@ Plugins
 * New function "OrthancPluginBufferCompression()" to (un)compress memory buffers
 * New function "OrthancPluginReadFile()" to read files from the filesystem
 * New function "OrthancPluginWriteFile()" to write files to the filesystem
+* New function "OrthancPluginGetErrorDescription()" to convert error codes to strings
 * Plugins have access to explicit error codes 
 
 Maintenance
